# qgo

./: CMakeLists.txt
src/: defines.h  main.cpp  mainwindow.ui  ragowidget.cpp  ragowidget.h  ragowidget.ui  src.pro
src/board/: board.cpp  board.h  boardwindow.cpp  boardwindow.ui
src/game_interfaces/: qgoboard.cpp  qgoboard.h  qgoboardlocalinterface.cpp
src/game_tree/: move.cpp
src/network/: tomconnection.cpp
src/rago/: Camera.cpp  Camera.hpp  Clock.cpp  Clock.hpp  Core.cpp  Core.hpp  Goban.cpp  Goban.hpp  Network.cpp  Network.hpp  Projector.cpp  Projector.hpp  RAGo.cscope_file_list  Stone.cpp  Stone.hpp  VirtualGoban.cpp  VirtualGoban.hpp  cscope.out  define.hpp  define_socket_code.hpp  mainRAGo.cpp  out_camera_data.xml  out_camera_data.yml  rago.hpp
